Fingerprint solution implemented!